# quantum_memory_data

./: Fig2_ellipsoid_QPT_GST.py  Fig3_nonMarkovian.py  Fig4_Markovian.py  Fig6_ellipsoid_GST.py  Fig7_nonMarkovian_ellipsoid_QPT.py  Fig8_raw_data.py  GST_gate_error.ipynb  Markovian_data.ipynb  QPT_gate_error_vs_fidelity.ipynb  QPT_vs_Ellipsoid_data_new.csv  README.md  Raw_nonMarkovian_Markobian_data.ipynb  benchmark_robustness_to_fidelity.py  fig_utils.py  gst_qpt_ellipsoid_plot.ipynb  iSWAP_t1t2.ipynb  main.py  non_Markovian150ns_data.ipynb  non_Markovian_data.ipynb  plot_robustness_from_csv.ipynb  pyproject.toml  resample_ellipsoid_QPT.ipynb  test.ipynb  text.ipynb
_not_in_used/: GST_gate_error.ipynb  QPT_gate_error_fidelity.csv  QPT_vs_Ellipsoid_data.csv  benchmark_robustness_to_fidelity.py  gst_qpt_ellipsoid_plot.ipynb  iSWAP_t1t2.ipynb  non_Markovian_data.ipynb  qpt_gst_ellipsoid.csv
data/: QPT_ellipsoid_GST.csv
data/QPT_vs_ellipsoid/: QPT10000_ellipsoid180_robustness_data.csv
data/analyze_data/: non_markovian_analyze_data.pkl  non_markovian_mle_analyze_data.pkl
data_processing/: QPT_gate_error_vs_fidelity.ipynb  Raw_nonMarkovian_Markobian_data.ipynb  resample_ellipsoid_QPT.ipynb
dev/: QPT_vs_ellipsoid.ipynb  QPT_vs_ellipsoid_marcos.py
quam_libs/: QI_utils.py  QPT_theory.py  QPT_vs_ellipsoid_marcos.py  TWPA_pump.py  _QI_function.py  _QM_analyze.py  _fit_ellipsoid.py  _macros.py  analyzer.py  ellipsoid_theory.py  iSWAP_t1t2.py  json_saver.py  macros.py  nonMarkovian_simulation.py  pyproject.toml  quantum_channel_utils.py  solid_angle_qpt.py
(+5937 files in other folders)
